--- a/templates/ph/mapa.html
+++ b/templates/ph/mapa.html
@@ -79,6 +79,12 @@
 
     window.map = { map: mapObj };
   }
+
+  // Recarrega a página a cada 2 minutos
+  setTimeout(function() {
+    location.reload();
+  }, 30000);
+  
 </script>
 
 {% endblock %}
