--- a/templates/ph/mapa.html
+++ b/templates/ph/mapa.html
@@ -80,10 +80,7 @@
     window.map = { map: mapObj };
   }
 
-  // Recarrega a página a cada 2 minutos
-  setTimeout(function() {
-    location.reload();
-  }, 30000);
+  setTimeout(function() {location.reload();}, 30000);
   
 </script>
 
